Partial_14Dec2021/force-app/main/default/objects/Reward_Master__c/Reward_Master__c.object-meta.xml
<CustomObject>
    <label>Reward Master</label>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>Reward Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>