Partial_14Dec2021/force-app/main/default/objects/Reward_Master__c/fields/Quantity_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Capacity__c</fullName>
    <label>Quantity/Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>