Partial_14Dec2021/force-app/main/default/objects/Reward_Master__c/fields/Reward_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reward_Quantity__c</fullName>
    <label>Reward Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>