Partial_14Dec2021/force-app/main/default/objects/Reward_Master__c/fields/Reward_Unit_of_Measuremnt__c.field-meta.xml
<CustomField>
    <fullName>Reward_Unit_of_Measuremnt__c</fullName>
    <label>Reward Unit of Measuremnt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>